# fundamentals

./: .gitignore  README.md  requirements.txt
00_Meta/: CHANGELOG.md
02_Projects/01_korean_chatbot/: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt
02_Projects/01_korean_chatbot/data/: daysync_manual.md
02_Projects/01_korean_chatbot/docs/: 01_TRANSFORMER_IMPLEMENT.md  02_RAG_INTEGRATION.md  03_LANGCHAIN_MIGRATION_PLAN.md  05_AI_AGENT_TRANSFORMATION.md  06_UPDATE_TRANFORMER.md  TEST.md
02_Projects/01_korean_chatbot/docs/retrospective/: 01_retrospective_transformer.md  02_retrospective_integration.md
02_Projects/01_korean_chatbot/src/: main.py  paths.py
02_Projects/01_korean_chatbot/src/custom_transformer/: test_causal_mask_fixed.py  test_class_balance.py  test_layer_independence.py  test_parameter_counting.py  test_sequential_interference.py  transformer_model.py
02_Projects/01_korean_chatbot/src/langchain_pipeline/: chain.py  llm.py  prompt.py  splitter.py  vector_store.py
02_Projects/01_korean_chatbot/src/rag_pipeline/: chunker.py  document_loader.py  embedder.py  graph_extractor.py  graph_retriever.py  prompt_builder.py  retriever.py  vector_store.py
02_Projects/01_korean_chatbot/tests/: conftest.py
02_Projects/01_korean_chatbot/tests/debugs/: debug_retrieval.py
02_Projects/01_korean_chatbot/tests/evaluate/: evaluate_answer_relevancy.py  evaluate_context_recall.py  langsmith_eval.py
02_Projects/01_korean_chatbot/tests/langchain_pipeline/: test_chain.py  test_llm.py  test_loader.py  test_prompt.py  test_splitter.py
(+360 files in other folders)
