[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-chatbot"
version = "0.1.0"
description = "From-scratch Transformer for Korean Chatbot"
authors = [{name = "Whale.lim(임경락)"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]          # src 폴더를 패키지 루트로 인식
[tool.pytest.ini_options]
markers = [
    "slow: 실제 모델(Gemma 등)을 로딩하는 무거운 테스트. 기본 실행에서는 -m \"not slow\"로 제외 가능.",
]
